--- a/Pasing-python/KR_rank.ipynb
+++ b/Pasing-python/KR_rank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -12,15 +12,10 @@
      "output_type": "stream",
      "text": [
       "scan vocabs ... \n",
-      "num vocabs = 76\n",
+      "num vocabs = 84\n",
       "done = 10\n",
-      "총\n",
-      "육백삼십이\n",
-      "6\n",
-      "3\n",
-      "2\n",
-      "['선박명 온두리호 총톤수는 육백삼십이톤이며 팔월 십오일 일곱시 오십분에 울산 외항으로 입항할 예정이다']\n",
-      "{'입/출항': '입항', '외/내항': '외항', '날짜': '8월15일', '시간': '7시50분', '선박명': '온두리호', '총톤수': '632톤'}\n"
+      "['선박명 온두리호 총톤수는 육백삼십이톤이며 이천이십년 팔월 십오일 십삼시 오십분에 울산 외항으로 입항할 예정이다']\n",
+      "{'입/출항': '입항', '외/내항': '외항', '날짜': '2020년8월15일', '시간': '13시50분', '선박명': '온두리호', '총톤수': '632톤'}\n"
      ]
     }
    ],
@@ -31,6 +26,7 @@
     "\n",
     "numberDic = {\n",
     "            '한':1, '두':2, '세':3, '네':4, '다섯':5, '여섯':6, '일곱':7, '여덜':8, '아홉':9, '열':10, '열한':11, '열두':12,\n",
+    "            '공일':1, '공이':2, '공삼':3, '공사':4, '공오':5, '공육':6, '공칠':7,  '공팔':8, '공구':9,\n",
     "            '일':1, '이':2, '삼':3, '사':4, '오':5, '육':6, '유':6, '칠':7, '팔':8, '구':9, '십':10, '시':10,\n",
     "            '십일':11, '십이':12, '십삼':13, '십사':14, '십오':15, '십육':16, '십칠':17, '십팔':18, '십구':19, '이십':20,\n",
     "            '이십일':21, '이십이':22, '이십삼':23, '이십사':24, '이십오':25, '이십육':26, '이십칠':27, '이십팔':28, '이십구':29, '삼십':30,\n",
@@ -56,6 +52,21 @@
     "\n",
     "def findDate(keywords):  #날짜 확인\n",
     "    dateStr = \"\"\n",
+    "    ans, temp = 0, 0\n",
+    "    for comp in keywords:\n",
+    "        if comp.find('년') != -1:\n",
+    "            yearnum = comp[0:comp.find('년')]\n",
+    "            for slicenum in yearnum:\n",
+    "                if slicenum in numberDic:\n",
+    "                    change = numberDic[slicenum]\n",
+    "                    if change == 1000 or change == 100 or change == 10:\n",
+    "                        ans += change if temp == 0 else temp*change\n",
+    "                        temp = 0\n",
+    "                    else:\n",
+    "                        temp = change\n",
+    "            if temp != 0: ans += temp\n",
+    "            if ans != 0:\n",
+    "                dateStr += str(ans) + '년';\n",
     "    for i in keywords:\n",
     "        if i.find('월') != -1:\n",
     "            monthnum = i[0:i.find('월')]\n",
@@ -96,7 +107,7 @@
     "        elif '내항' in i:\n",
     "            answerDic['외/내항'] = '내항'\n",
     "\n",
-    "def findShipName(keywords, texts):\n",
+    "def findShipName(keywords, texts): #선박명 확인\n",
     "    splitText = texts[0].split(' ')\n",
     "    breakPoint = False\n",
     "    for comp in splitText:\n",
@@ -108,12 +119,11 @@
     "        if comp in name or name in comp:\n",
     "            answerDic['선박명'] = name\n",
     "    \n",
-    "def findShipWeight(keywords):\n",
+    "def findShipWeight(keywords): #총톤수 확인\n",
     "    ans, temp = 0, 0\n",
     "    for comp in keywords:\n",
     "        if comp.find('톤') != -1:\n",
     "            amountnum = comp[0:comp.find('톤')]\n",
-    "            print(amountnum)\n",
     "            for slicenum in amountnum:\n",
     "                if slicenum in numberDic:\n",
     "                    change = numberDic[slicenum]\n",
@@ -121,7 +131,6 @@
     "                        ans += change if temp == 0 else temp*change\n",
     "                        temp = 0\n",
     "                    else:\n",
-    "                        print(change)\n",
     "                        temp = change\n",
     "            if temp != 0: ans += temp\n",
     "            if ans != 0:\n",
@@ -129,18 +138,18 @@
     "                    \n",
     "    \n",
     "\n",
-    "texts = [\"선박명 온두리호 총톤수는 육백삼십이톤이며 팔월 십오일 일곱시 오십분에 울산 외항으로 입항할 예정이다\"]\n",
+    "texts = [\"선박명 온두리호 총톤수는 육백삼십이톤이며 이천이십년 팔월 십오일 십삼시 오십분에 울산 외항으로 입항할 예정이다\"]\n",
     "texts = [normalize(text, english=False, number=False) for text in texts]\n",
     "# texts 전처리 영어 미포함, 숫자 미포함 설정\n",
     "\n",
     "keywords = krWordRankFunc(texts);\n",
     "\n",
-    "findInOut(keywords)\n",
-    "findHarborLocation(keywords)\n",
-    "findDate(keywords)\n",
-    "findTime(keywords)\n",
-    "findShipName(keywords, texts)\n",
-    "findShipWeight(keywords)\n",
+    "findInOut(keywords) #입/출항 추출 함수\n",
+    "findHarborLocation(keywords) #외/내항 추출 함수\n",
+    "findDate(keywords) # 날짜 데이터 추출함수\n",
+    "findTime(keywords) # 시간 데이터 추출함수\n",
+    "findShipName(keywords, texts) # 선박명 추출함수\n",
+    "findShipWeight(keywords) # 총톤수 추출함수\n",
     "\n",
     "with open('./test.json', 'w', encoding='utf-8') as make_file:\n",
     "    json.dump(answerDic, make_file, ensure_ascii = False)\n",
