--- a/Pasing-python/KR_rank.ipynb
+++ b/Pasing-python/KR_rank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -12,10 +12,10 @@
      "output_type": "stream",
      "text": [
       "scan vocabs ... \n",
-      "num vocabs = 84\n",
+      "num vocabs = 70\n",
       "done = 10\n",
-      "['선박명 온두리호 총톤수는 육백삼십이톤이며 이천이십년 팔월 십오일 십삼시 오십분에 울산 외항으로 입항할 예정이다']\n",
-      "{'입/출항': '입항', '외/내항': '외항', '날짜': '2020년8월15일', '시간': '13시50분', '선박명': '온두리호', '총톤수': '632톤'}\n"
+      "['선박명 현수호 총톤수는 632톤 2020년 8월 1일 9시 15분에 울산 외항으로 입항할 예정이다']\n",
+      "{'입/출항': '입항', '외/내항': '외항', '날짜': '2020-08-01', '시간': '09:15', '선박명': '현수호', '총톤수': '632톤'}\n"
      ]
     }
    ],
@@ -24,17 +24,6 @@
     "from krwordrank.word import KRWordRank\n",
     "import json\n",
     "\n",
-    "numberDic = {\n",
-    "            '한':1, '두':2, '세':3, '네':4, '다섯':5, '여섯':6, '일곱':7, '여덜':8, '아홉':9, '열':10, '열한':11, '열두':12,\n",
-    "            '공일':1, '공이':2, '공삼':3, '공사':4, '공오':5, '공육':6, '공칠':7,  '공팔':8, '공구':9,\n",
-    "            '일':1, '이':2, '삼':3, '사':4, '오':5, '육':6, '유':6, '칠':7, '팔':8, '구':9, '십':10, '시':10,\n",
-    "            '십일':11, '십이':12, '십삼':13, '십사':14, '십오':15, '십육':16, '십칠':17, '십팔':18, '십구':19, '이십':20,\n",
-    "            '이십일':21, '이십이':22, '이십삼':23, '이십사':24, '이십오':25, '이십육':26, '이십칠':27, '이십팔':28, '이십구':29, '삼십':30,\n",
-    "            '삼십일':31, '삼십이':32, '삼십삼':33, '삼십사':34, '삼십오':35, '삼십육':36, '삼십칠':37, '삼십팔':38, '삼십구':39, '사십':40,\n",
-    "            '사십일':41, '사십이':42, '사십삼':43, '사십사':44, '사십오':45, '사십육':46, '사십칠':47, '사십팔':48, '사십구':49, '오십':50,\n",
-    "            '오십일':51, '오십이':52, '오십삼':53, '오십사':54, '오십오':55, '오십육':56, '오십칠':57, '오십팔':58, '오십구':59, '육십':60,\n",
-    "            '천':1000, '백':100\n",
-    "            }\n",
     "answerDic = {}\n",
     "\n",
     "def krWordRankFunc(texts):\n",
@@ -56,56 +45,59 @@
     "    for comp in keywords:\n",
     "        if comp.find('년') != -1:\n",
     "            yearnum = comp[0:comp.find('년')]\n",
-    "            for slicenum in yearnum:\n",
-    "                if slicenum in numberDic:\n",
-    "                    change = numberDic[slicenum]\n",
-    "                    if change == 1000 or change == 100 or change == 10:\n",
-    "                        ans += change if temp == 0 else temp*change\n",
-    "                        temp = 0\n",
-    "                    else:\n",
-    "                        temp = change\n",
-    "            if temp != 0: ans += temp\n",
-    "            if ans != 0:\n",
-    "                dateStr += str(ans) + '년';\n",
+    "            if yearnum.isdigit():\n",
+    "                dateStr += yearnum + '-'\n",
+    "                break\n",
     "    for i in keywords:\n",
     "        if i.find('월') != -1:\n",
     "            monthnum = i[0:i.find('월')]\n",
-    "            if(monthnum in numberDic):\n",
-    "                dateStr += str(numberDic[monthnum]) + '월'            \n",
+    "            if monthnum.isdigit():\n",
+    "                dateStr += monthnum.zfill(2) + '-'   \n",
+    "                break\n",
     "    for i in keywords:\n",
     "        if i.find('일') != -1:\n",
-    "            monthnum = i[0:i.find('일')]\n",
-    "            if(monthnum in numberDic):\n",
-    "                dateStr += str(numberDic[monthnum]) + '일'\n",
-    "    answerDic['날짜'] = dateStr;\n",
+    "            daynum = i[0:i.find('일')]\n",
+    "            if daynum.isdigit():\n",
+    "                dateStr += daynum.zfill(2)\n",
+    "                break\n",
+    "    answerDic['날짜'] = dateStr\n",
     "\n",
     "def findTime(keywords): #시간 확인\n",
     "    timeStr = \"\"\n",
     "    for i in keywords:\n",
     "        if i.find('시') != -1:\n",
     "            timenum = i[0:i.find('시')]\n",
-    "            if(timenum in numberDic):\n",
-    "                timeStr += str(numberDic[timenum]) + '시'\n",
+    "            if timenum.isdigit():\n",
+    "                timeStr += timenum.zfill(2) + ':'\n",
+    "                break\n",
+    "            elif timenum == '공공':\n",
+    "                timeStr += '00:'\n",
+    "                break\n",
     "    for i in keywords:\n",
     "        if i.find('분') != -1:\n",
     "            timenum = i[0:i.find('분')]\n",
-    "            if(timenum in numberDic):\n",
-    "                timeStr += str(numberDic[timenum]) + '분'\n",
-    "    answerDic['시간'] = timeStr;\n",
+    "            if timenum.isdigit():\n",
+    "                timeStr += timenum.zfill(2)\n",
+    "                break\n",
+    "    answerDic['시간'] = timeStr\n",
     "    \n",
     "def findInOut(keywords): #입/출항 확인\n",
     "    for i in keywords:\n",
     "        if '입항' in i:\n",
     "            answerDic['입/출항'] = '입항'\n",
+    "            break\n",
     "        elif '출항' in i:\n",
     "            answerDic['입/출항'] = '출항'\n",
+    "            break\n",
     "\n",
     "def findHarborLocation(keywords): #외항/내항 확인\n",
     "    for i in keywords:\n",
     "        if '외항' in i:\n",
     "            answerDic['외/내항'] = '외항'\n",
+    "            break\n",
     "        elif '내항' in i:\n",
     "            answerDic['외/내항'] = '내항'\n",
+    "            break\n",
     "\n",
     "def findShipName(keywords, texts): #선박명 확인\n",
     "    splitText = texts[0].split(' ')\n",
@@ -118,38 +110,38 @@
     "    for name in keywords:\n",
     "        if comp in name or name in comp:\n",
     "            answerDic['선박명'] = name\n",
+    "            break\n",
     "    \n",
-    "def findShipWeight(keywords): #총톤수 확인\n",
-    "    ans, temp = 0, 0\n",
+    "def findShipWeight(keywords, texts): #총톤수 확인\n",
+    "    splitText = texts[0].split(' ')\n",
+    "    splitLen = len(splitText)\n",
     "    for comp in keywords:\n",
-    "        if comp.find('톤') != -1:\n",
-    "            amountnum = comp[0:comp.find('톤')]\n",
-    "            for slicenum in amountnum:\n",
-    "                if slicenum in numberDic:\n",
-    "                    change = numberDic[slicenum]\n",
-    "                    if change == 1000 or change == 100 or change == 10:\n",
-    "                        ans += change if temp == 0 else temp*change\n",
-    "                        temp = 0\n",
-    "                    else:\n",
-    "                        temp = change\n",
-    "            if temp != 0: ans += temp\n",
-    "            if ans != 0:\n",
-    "                answerDic['총톤수'] = str(ans) + '톤';\n",
+    "        if comp.find('톤') != -1 and comp[0:comp.find('톤') - 1].isdigit():\n",
+    "            answerDic['총톤수'] = comp\n",
+    "            break\n",
+    "        elif comp.isdigit():\n",
+    "            for i in range(0,splitLen):\n",
+    "                if comp == splitText[i] and '톤' in splitText[i + 1]:\n",
+    "                    answerDic['총톤수'] = comp + '톤'\n",
+    "                    break\n",
+    "            \n",
     "                    \n",
     "    \n",
     "\n",
-    "texts = [\"선박명 온두리호 총톤수는 육백삼십이톤이며 이천이십년 팔월 십오일 십삼시 오십분에 울산 외항으로 입항할 예정이다\"]\n",
-    "texts = [normalize(text, english=False, number=False) for text in texts]\n",
+    "texts = [\"선박명 현수호 총톤수는 632톤 2020년 8월 1일 9시 15분에 울산 외항으로 입항할 예정이다\"]\n",
+    "texts = [normalize(text, english=False, number=True) for text in texts]\n",
     "# texts 전처리 영어 미포함, 숫자 미포함 설정\n",
     "\n",
     "keywords = krWordRankFunc(texts);\n",
+    "\n",
+    "# print(keywords)\n",
     "\n",
     "findInOut(keywords) #입/출항 추출 함수\n",
     "findHarborLocation(keywords) #외/내항 추출 함수\n",
     "findDate(keywords) # 날짜 데이터 추출함수\n",
     "findTime(keywords) # 시간 데이터 추출함수\n",
     "findShipName(keywords, texts) # 선박명 추출함수\n",
-    "findShipWeight(keywords) # 총톤수 추출함수\n",
+    "findShipWeight(keywords, texts) # 총톤수 추출함수\n",
     "\n",
     "with open('./test.json', 'w', encoding='utf-8') as make_file:\n",
     "    json.dump(answerDic, make_file, ensure_ascii = False)\n",
